# programming-practice

./: CMakeLists.txt  build.sh
10/: in  main  main.c  out  out1  out2  out3  start.sh  stringfunc.c  stringfunc.h
11/: in  main  main.c  out  structfunc.c  structfunc.h
2/: 2  2.c  3  3.c  4  4.c  5  5.c  6  7  7.c  8
3/: 1  1.c  2  2.c  3  3.c  4  5  5.c  6  6.c  7  7.c  8  8.c
4/: 1  1.c  2  2.c  3  3.c  4  4.c  5  5.c  6  6.c  7  7.c  8  8.c  9
5/: 1  1.c  10  10.c  11  11.c  12  12.c  13  13.c  14  14.c  15  15.c  16  16.c  17  17.c  18  18.c  2  2.c  3  3.c  4  4.c  5  5.c  6  6.c  7  7.c  8  8.c  9  9.c
6/: 2.c  3.c  4.c  5.c  6.c  7.c  8.c
7/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  Nums.c
8/: 1.c  10.c  11.c  13.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  main.c  myarrfunc.c  myarrfunc.h
9/: main.c  matrixfunc.c  matrixfunc.h  text.txt
